# Stippling

./: README.md  readme.txt
dependencies/linux/: readme.txt
dependencies/windows/: readme.txt
source/: readme.txt
source/stippling/: CMakeLists.txt
source/stippling/cmake_modules/: FindGLEW.cmake  FindGLM.cmake
source/stippling/resources/: camera_specifications.qrc  shaders.qrc
source/stippling/resources/camera_specifications/: camera_specifications.xml
source/stippling/resources/shaders/: colorShader.frag~  colorShader.vert~  pickingShader.frag  pickingShader.frag~  pickingShader.vert  pickingShader.vert~  stippleShader.frag  stippleShader.vert  textureShader.frag  textureShader.frag~  textureShader.vert  textureShader.vert~  xyColorShader.vert  xzColorShader.vert  zColorShader.frag  zColorShader.vert  zColorShader.vert~
source/stippling/src/: boolmesh.cpp  boolmesh.h  camera.cpp  camera.h  configuration.cpp  configuration.h  configurationdialog.cpp  configurationdialog.h  controlpoint.cpp  controlpoint.h  cylinder.cpp  cylinder.h  dotgenerationworker.cpp  dotgenerationworker.h  entity3d.cpp  entity3d.h  entitytreecontroller.cpp  entitytreecontroller.h  entitytreenode.cpp  entitytreenode.h  entitytreewidget.cpp  entitytreewidget.h  entitytreewidgetitem.cpp  entitytreewidgetitem.h  enums.h  floorplane.cpp  floorplane.h  focallengthnotfounddialog.cpp  focallengthnotfounddialog.h  framebuffer.cc  framebuffer.hh  glcamera.cpp  glcamera.h  glentity.cpp  glentity.h  glwidget3dengine.cpp  glwidget3dengine.h  glwidget3denginesuperiorvisualization.cpp  glwidget3denginesuperiorvisualization.h  glwidgetstippling.cpp  (+34 more)
source/stippling/ui/: configurationdialog.ui  focallengthnotfounddialog.ui  mainwindow.ui  specificentityconfigurationdialog.ui
use examples/test battery/: Thumbs.db
use examples/test battery/test1/: Thumbs.db
use examples/test battery/test1/3dengine/: Thumbs.db
use examples/test battery/test1/stippling/: Thumbs.db
use examples/torre_di_pisa/: Torre_di_Pisa.xml  camera settings  camera settings~  tdp2.xml  tdp3.xml
